src/parser/template-string-grammar-parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Start: peg$parseStart },
      peg$startRuleFunction  = peg$parseStart,

      peg$c0 = function(head, tail) {
          return createCompoundStringExpression([head, ...flatten(tail)]);
        },
      peg$c1 = function() {
          return createStringLiteral(text());
        },
      peg$c2 = "#{",
      peg$c3 = peg$literalExpectation("#{", false),
      peg$c4 = peg$anyExpectation(),
      peg$c5 = function() {
          return text();
        },
      peg$c6 = "}",
      peg$c7 = peg$literalExpectation("}", false),
      peg$c8 = function(e) {
          return e;
        },
      peg$c9 = peg$otherExpectation("expression"),
      peg$c10 = peg$otherExpectation("conditional"),
      peg$c11 = "?",
      peg$c12 = peg$literalExpectation("?", false),
      peg$c13 = ":",
      peg$c14 = peg$literalExpectation(":", false),
      peg$c15 = function(test, consequent, alternate) {
          return createConditionalExpression(createLocation(location(), options), test, consequent, alternate);
        },
      peg$c16 = peg$otherExpectation("logical or expression"),
      peg$c17 = function(head, tail) {
          return composeBinaryExpression(createLocation(location(), options), head, tail);
        },
      peg$c18 = peg$otherExpectation("logical and expression"),
      peg$c19 = peg$otherExpectation("equality expression"),
      peg$c20 = peg$otherExpectation("equality operator"),
      peg$c21 = "==",
      peg$c22 = peg$literalExpectation("==", false),
      peg$c23 = "!=",
      peg$c24 = peg$literalExpectation("!=", false),
      peg$c25 = peg$otherExpectation("relational expression"),
      peg$c26 = peg$otherExpectation("relational operator"),
      peg$c27 = "<=",
      peg$c28 = peg$literalExpectation("<=", false),
      peg$c29 = ">=",
      peg$c30 = peg$literalExpectation(">=", false),
      peg$c31 = "<",
      peg$c32 = peg$literalExpectation("<", false),
      peg$c33 = ">",
      peg$c34 = peg$literalExpectation(">", false),
      peg$c35 = peg$otherExpectation("addition or subtraction operator"),
      peg$c36 = "+",
      peg$c37 = peg$literalExpectation("+", false),
      peg$c38 = "=",
      peg$c39 = peg$literalExpectation("=", false),
      peg$c40 = "-",
      peg$c41 = peg$literalExpectation("-", false),
      peg$c42 = peg$otherExpectation("multiply, divide, or modulo operator"),
      peg$c43 = "*",
      peg$c44 = peg$literalExpectation("*", false),
      peg$c45 = "/",
      peg$c46 = peg$literalExpectation("/", false),
      peg$c47 = "%",
      peg$c48 = peg$literalExpectation("%", false),
      peg$c49 = peg$otherExpectation("unary expression"),
      peg$c50 = function(operator, argument) {
          return createUnaryExpression(createLocation(location(), options), operator, argument);
        },
      peg$c51 = peg$otherExpectation("unary operator"),
      peg$c52 = peg$otherExpectation("left-hand side"),
      peg$c53 = peg$otherExpectation("call expression"),
      peg$c54 = function(callee, args) {
            return createCallExpression(createLocation(location(), options), callee, args);
          },
      peg$c55 = function(head, args) {
            return { type: 'call', args }
          },
      peg$c56 = "[",
      peg$c57 = peg$literalExpectation("[", false),
      peg$c58 = "]",
      peg$c59 = peg$literalExpectation("]", false),
      peg$c60 = function(head, property) {
            return { 'type': 'member', property };
          },
      peg$c61 = ".",
      peg$c62 = peg$literalExpectation(".", false),
      peg$c63 = function(head, property) {
            return { 'type': 'member', property: createStringLiteral(property) };
          },
      peg$c64 = function(head, tail) {
          return tail.reduce((result, element) => {
            if (element.type === 'call') {
              return createCallExpression(createLocation(location(), options), result, element.args);
            } else {
              return createObjectPropertyExpression(createLocation(location(), options), result, element.property);
            }
          }, head);
        },
      peg$c65 = peg$otherExpectation("arguments"),
      peg$c66 = "(",
      peg$c67 = peg$literalExpectation("(", false),
      peg$c68 = ")",
      peg$c69 = peg$literalExpectation(")", false),
      peg$c70 = function(args) {
          return args ? args[0] : [];
        },
      peg$c71 = function(head, tail) {
          return composeList(head, extractList(tail, 3));
        },
      peg$c72 = peg$otherExpectation("member expression"),
      peg$c73 = function(head, property) {
            return { property };
          },
      peg$c74 = function(head, property) {
            return { property: createStringLiteral(property) };
          },
      peg$c75 = function(head, tail) {
          return tail.reduce((result, element) => createObjectPropertyExpression(createLocation(location(), options), result, element.property), head);
        },
      peg$c76 = peg$otherExpectation("spread"),
      peg$c77 = "...",
      peg$c78 = peg$literalExpectation("...", false),
      peg$c79 = function(e) {
          return createSpreadExpression(createLocation(location(), options), e);
        },
      peg$c80 = function(i) {
          return createVariableExpression(i);
        },
      peg$c81 = peg$otherExpectation("undefined"),
      peg$c82 = function() {
          return createUndefinedLiteral();
        },
      peg$c83 = peg$otherExpectation("boolean"),
      peg$c84 = function() {
          return createBooleanLiteral(true);
        },
      peg$c85 = function() {
          return createBooleanLiteral(false);
        },
      peg$c86 = peg$otherExpectation("array"),
      peg$c87 = function(e) {
          return createArrayLiteral(createLocation(location(), options), e);
        },
      peg$c88 = function() {
          return createArrayLiteral(createLocation(location(), options), []);
        },
      peg$c89 = function(e) {
          return [e];
        },
      peg$c90 = peg$otherExpectation("object"),
      peg$c91 = "{",
      peg$c92 = peg$literalExpectation("{", false),
      peg$c93 = function(p) {
          return createObjectLiteral(createLocation(location(), options), p);
        },
      peg$c94 = function() {
          return createObjectLiteral(createLocation(location(), options), []);
        },
      peg$c95 = function(head, tail) {
          return composeList(head, tail);
        },
      peg$c96 = function(p) {
          return [p];
        },
      peg$c97 = peg$otherExpectation(","),
      peg$c98 = ",",
      peg$c99 = peg$literalExpectation(",", false),
      peg$c100 = function(key, value) {
          return createObjectLiteralPropertyExpression(key, value);
        },
      peg$c101 = peg$otherExpectation("dice"),
      peg$c102 = "d",
      peg$c103 = peg$literalExpectation("d", false),
      peg$c104 = "D",
      peg$c105 = peg$literalExpectation("D", false),
      peg$c106 = function(count, die, suffix) {
          return createDiceLiteral(count, die, suffix);
        },
      peg$c107 = function(die, suffix) {
          return createDiceLiteral(1, die, suffix);
        },
      peg$c108 = function(operator, specifier, count) {
          return createDiceLiteralSuffix(operator, specifier.toLowerCase(), count);
        },
      peg$c109 = "l",
      peg$c110 = peg$literalExpectation("l", false),
      peg$c111 = "L",
      peg$c112 = peg$literalExpectation("L", false),
      peg$c113 = "h",
      peg$c114 = peg$literalExpectation("h", false),
      peg$c115 = "H",
      peg$c116 = peg$literalExpectation("H", false),
      peg$c117 = peg$otherExpectation("whitespace"),
      peg$c118 = /^[ \t\n\r]/,
      peg$c119 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c120 = peg$otherExpectation("integer"),
      peg$c121 = function(f) {
          return createNumberLiteral(f);
        },
      peg$c122 = function(i) {
          return createNumberLiteral(i);
        },
      peg$c123 = "0.",
      peg$c124 = peg$literalExpectation("0.", false),
      peg$c125 = function() {
          return parseFloat(text());
        },
      peg$c126 = "0",
      peg$c127 = peg$literalExpectation("0", false),
      peg$c128 = function() {
          return 0;
        },
      peg$c129 = function(i) {
          return parseInt(text());
        },
      peg$c130 = function() {
          return parseInt(text());
        },
      peg$c131 = /^[1-9]/,
      peg$c132 = peg$classExpectation([["1", "9"]], false, false),
      peg$c133 = /^[0-9]/,
      peg$c134 = peg$classExpectation([["0", "9"]], false, false),
      peg$c135 = peg$otherExpectation("identifier"),
      peg$c136 = function(head, tail) {
          return head + tail.join('');
        },
      peg$c137 = /^[_a-zA-Z]/,
      peg$c138 = peg$classExpectation(["_", ["a", "z"], ["A", "Z"]], false, false),
      peg$c139 = peg$otherExpectation("string"),
      peg$c140 = function(s) {
          return createStringLiteral(s);
        },
      peg$c141 = "'",
      peg$c142 = peg$literalExpectation("'", false),
      peg$c143 = function(s) {
          return s.join('');
        },
      peg$c144 = "\"",
      peg$c145 = peg$literalExpectation("\"", false),
      peg$c146 = "\\\"",
      peg$c147 = peg$literalExpectation("\\\"", false),
      peg$c148 = function() {
          return '"';
        },
      peg$c149 = "\\'",
      peg$c150 = peg$literalExpectation("\\'", false),
      peg$c151 = function() {
          return "'";
        },
      peg$c152 = "true",
      peg$c153 = peg$literalExpectation("true", false),
      peg$c154 = "false",
      peg$c155 = peg$literalExpectation("false", false),
      peg$c156 = "and",
      peg$c157 = peg$literalExpectation("and", false),
      peg$c158 = "or",
      peg$c159 = peg$literalExpectation("or", false),
      peg$c160 = "not",
      peg$c161 = peg$literalExpectation("not", false),
      peg$c162 = function() { return 'not'; },
      peg$c163 = "undefined",
      peg$c164 = peg$literalExpectation("undefined", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$resultsCache = {},

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0, s1, s2, s3, s4, s5;

    var key    = peg$currPos * 60 + 0,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseRawText();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseTemplateString();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseRawText();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseTemplateString();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseRawText();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseRawText() {
    var s0, s1, s2;

    var key    = peg$currPos * 60 + 1,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseRawChar();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseRawChar();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c1();
    }
    s0 = s1;

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseRawChar() {
    var s0, s1, s2;

    var key    = peg$currPos * 60 + 2,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$currPos;
    peg$silentFails++;
    if (input.substr(peg$currPos, 2) === peg$c2) {
      s2 = peg$c2;
      peg$currPos += 2;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c3); }
    }
    peg$silentFails--;
    if (s2 === peg$FAILED) {
      s1 = void 0;
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      if (input.length > peg$currPos) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c5();
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseTemplateString() {
    var s0, s1, s2, s3, s4, s5;

    var key    = peg$currPos * 60 + 3,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c2) {
      s1 = peg$c2;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c3); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseExpression();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse__();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 125) {
              s5 = peg$c6;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c7); }
            }
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c8(s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseExpression() {
    var s0, s1, s2;

    var key    = peg$currPos * 60 + 4,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseConditionalExpression();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c8(s1);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c9); }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseConditionalExpression() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    var key    = peg$currPos * 60 + 5,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
